[tool.poetry]
name = "rrational"
version = "0.1.0"
description = "scrape reddit.com/r/rational and analyze"
authors = ["wassname"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = "^1.26.1"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
loguru = "^0.7.2"
tqdm = "^4.66.1"
python-dotenv = "^1.0.1"
praw = "^7.7.1"
markdown = "^3.7"
bs4 = "^0.0.2"

[[tool.poetry.source]]
# pytorch cuda needs to compe from another source https://python-poetry.org/docs/dependency-specification/#source-dependencies
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
ipywidgets = "^8.1.3"
ruff = "^0.1.3"
pylama = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true
